# robocup-pcb

./: .gitignore  .gitmodules  README.md  circle.yml
DRC/: RJ2LayerDRU.dru  RJ4LayerDRU.dru
RFID-2014-a/: RFID-2014-a.ms11  RFID-2014-a.ms11 (Security copy)  rfid-2014-a.brd  rfid-2014-a.sch
active/: README.md
active-pcb/: README.md  mbed-ref_design.sch
antenna/: shriquen_via.pcb
archive-pcb/base-station-old/proto_2/test/: CMakeLists.txt
base-2009/: cc1101.ods  led_holes.txt
base-2011/: Makefile
base-old/proto_2/cw_test/: CMakeLists.txt  main.cpp
base-station-2009/: base-station-2009.sch
base-station-2011/: radio.sch
boards/: README.md  radio-v3.1.brd  radio-v3.1.sch
cam/: ITeadstudio_CAM6.cam  ITeadstudio_CAM6_minimal.cam  RJ2LayerCAM-updatedcam  RJ2LayerCAM.cam  RJ4LayerCAM.cam
cam-jobs/: ITeadstudio_CAM6_minimal.cam  RJ2LayerCAM.cam  RJ4LayerCAM.cam
control-2008/: RC08.brd  RC08.erc
control-2011-a/: 66each.cam  control-2011-a.brd
control-2011-b/: 66each.cam  jtag-cable.xls  mainpcb.brd
control-2011-c/: assembly.ods  bottom.ger  bottom_mask.ger  bottom_silk.ger  drill.nc  inner2.ger  inner3.ger  jtag-cable.xls  mainpcb.sch  outline.ger  parts.csv  parts.ods  parts.xls  parts_order.ods  parts_pop.csv  partslist.csv  top.ger  top_mask.ger  top_silk.ger
control-2014-a/: bottom_silk.ger  c14_partslists.csv  control-2014-a.sch  inner2.ger  mainpcb (2).brd  mainpcb (2).pro  mainpcb (2).sch  mainpcb (3).brd  mainpcb (3).sch  mainpcb (4).brd  mainpcb (4).pro  mainpcb (4).sch  mainpcb (5).brd  mainpcb (5).sch  mainpcb (6).brd  mainpcb (6).sch  (+8 more)
(+1229 files in other folders)
